change desc size in banner

--- a/src/styles/routes/_home.scss
+++ b/src/styles/routes/_home.scss
@@ -80,8 +80,8 @@
     font-size: 14px;
     font-weight: 400;
     max-width: 400px;
-    max-height: 57px;
-    overflow: hidden;
+    // max-height: 57px;
+    // overflow: hidden;
 }
 
 .movie-hero-play{
